--- a/style.css
+++ b/style.css
@@ -223,3 +223,25 @@ input:focus, textarea:focus {
 
 
 
+
+
+@media only screen and (max-width: 980px) {
+	
+}
+
+@media only screen and (max-width: 768px) {
+
+	#words {float: left; 
+			clear: top; 
+			overflow: auto;}
+
+	nav {}
+
+
+	
+}
+@media only screen and (max-width: 640px) {
+	
+}
+
+
